--- a/calibre.css
+++ b/calibre.css
@@ -24,7 +24,7 @@ h1, h2, h3, h4, h5, h6 {
   font-weight:bold;
 }
 
-/*Default Foliate themes:*/
+/*For reference ONLY: Default Foliate themes*/
 
 const defaultThemes = [
     {
